--- a/templates/index.html
+++ b/templates/index.html
@@ -6,14 +6,14 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>Recommender App</title>
-    <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='assets/favicon.ico')}}" />
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
     <link href="https://fonts.googleapis.com/css?family=Varela+Round" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
     <!-- Core theme CSS (includes Bootstrap)-->
-    <link href="css/styles.css" rel="stylesheet" />
+    <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet" />
   </head>
   <body id="page-top">
     <!-- Navigation-->
@@ -40,7 +40,7 @@
           <div class="text-center">
             <h1 class="mx-auto my-0 text-uppercase mt-4">Name Recommender</h1>
             <h2 class="text-white-50 mx-auto mt-2 mb-5">Website ini menyajikan rekomondasi nama yang diambil dari bahasa Jawa, Arab dan Indonesia.</h2>
-            <a class="btn btn-primary" href="/app_recom.html">Get Started</a>
+            <a class="btn btn-primary" href="{{url_for('rekomondasi')}}">Get Started</a>
           </div>
         </div>
       </div>
@@ -162,7 +162,7 @@
     <!-- Bootstrap core JS-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
-    <script src="js/scripts.js"></script>
+    <script src="{{ url_for('static', filename='js/scripts.js')}}"></script>
     <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * *-->
     <!-- * *                               SB Forms JS                               * *-->
     <!-- * * Activate your form at https://startbootstrap.com/solution/contact-forms * *-->
