--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
           <ul class="navbar-nav ms-auto">
             <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
             <!--  <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>-->
-            <li class="nav-item"><a class="nav-link" href="#signup">Contact</a></li>
+            <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
           </ul>
         </div>
       </div>
@@ -52,7 +52,7 @@
           <div class="col-lg-8">
             <h2 class="text-white mb-4">Name Recommander App</h2>
             <p class="text-white-50">
-              Sistem ini dibangun dengan python dengan metode Content-based filtering yang menggunakan persamaan algoritma cosine similarity, Penghitungan bobot menggunakan TFID, dan mengahasilkan nama percampuran jawa, indonesia dan arab.
+              Sistem ini dibangun dengan python dengan metode Content-based filtering yang menggunakan persamaan algoritma cosine similarity. Penghitungan bobot menggunakan TFIDF, dan mengahasilkan nama percampuran jawa, indonesia dan arab.
             </p>
           </div>
         </div>
@@ -104,7 +104,7 @@
     </section>
 -->
     <!-- Signup-->
-    <section class="signup-section" id="signup">
+    <section class="signup-section" id="contact">
       <div class="container px-4 px-lg-5">
         <div class="row gx-4 gx-lg-5">
           <div class="col-md-10 col-lg-8 mx-auto text-center">
